--- a/css/1.选择器以及选择器的优先级.html
+++ b/css/1.选择器以及选择器的优先级.html
@@ -4,15 +4,75 @@
     <meta charset="UTF-8">
     <title>选择器及其优先级</title>
 </head>
+<style>
+    .ancestor{
+        background-color: #989EA4;
+        width: 500px;
+        height: 500px;
+        border: 1px solid blueviolet;
+    }
+    .parent {
+        width: 300px;
+        height: 300px;
+        background: yellow;
+    }
+    p{
+        background-color: deeppink;
+        color: #000;
+        border: 1px solid black;
+        width: 100%;
+    }
+    h1{
+        white-space: nowrap;
+    }
+    span{
+        background-color: paleturquoise;
+    }
+    /*div p{*/
+        /*!*element空格element : 选择所有div 里面的所有的p元素*!*/
+        /*color: yellowgreen;*/
+    /*}*/
+    /*div,p{*/
+        /*!* element,element 选择所有的div和所有的p元素 *!*/
+        /*color: white;*/
+    /*}*/
+    div>p{
+        /*element>element 选择所有父元素为div的所有p元素*/
+        /*color: white;*/
+    }
+    div+p{
+        /*紧邻在div之后的p元素*/
+        color: white;
+    }
+
+
+
+
+
+
+
+
+
+
+</style>
 <body>
 <!--选择器的优先级
   !important > 行内样式>ID选择器 > 类选择器 > 标签 > 通配符 > 继承 > 浏览器默认属性
 -->
-<div class="classNumber" id="idNumber"  >
-<div>
-
-</div>
-
+<div class="ancestor">
+    <p> ancestor 子元素 标签p</p>
+    <div class="parent">
+        <p>parent p1</p>
+        <p> parent p2</p>
+        <h1>i am a separator</h1>
+        <span>lmp</span>
+    </div>
+    <p>我是紧邻在div 之后的元素123</p>
+    <p>我是在div 之后的第二个元素</p>
+    <section>
+        <p>123</p>
+    </section>
+    <p> ancestor 子元素 第二个标签p </p>
 </div>
 </body>
 </html>
